# traducteur-bot-rs

./: Cargo.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  wrangler.toml
.github/: dependabot.yml
.github/workflows/: build.yml
src/: lib.rs
